fix: fix the bug of hamburger menu , when click on any like,it would not collapse + add smooth scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ html {
     /* font-size: 10px; */
     font-size: 62.5%;
     overflow-x: hidden;
-    /* scroll-behavior: smooth; */
+    scroll-behavior: smooth;
 }
 * {
     margin: 0;
